Make sure lists never show horizontal scrollbar

--- a/src/app/invoicingSimulator/InvoicingSimulator.css
+++ b/src/app/invoicingSimulator/InvoicingSimulator.css
@@ -32,6 +32,7 @@
     margin-bottom: 6px;
 
     padding: 0.8em;
+    overflow-x: hidden;
 }
 
 .tp-invoicing-simulator .tp-invoicing-simulator-list .cc-list-empty-state {
